<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <EditText
        android:id="@+id/zPerA"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/zPerA"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/zPerP"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/zPerP"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zPerA" />

    <EditText
        android:id="@+id/omega"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/omega"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zPerP" />

    <EditText
        android:id="@+id/t"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/t"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/omega" />

    <EditText
        android:id="@+id/kp"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/kp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t" />

    <EditText
        android:id="@+id/Pm"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/Pm"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kp" />

    <EditText
        android:id="@+id/Tm"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/Tm"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pm" />

    <Button
        android:id="@+id/buttonCalculateTask2"
        android:layout_width="128dp"
        android:layout_height="51dp"
        android:layout_marginBottom="68dp"
        android:text="Calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/outputTask2"
        android:layout_width="368dp"
        android:layout_height="197dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tm" />

</androidx.constraintlayout.widget.ConstraintLayout>